<resources>
    <string name="app_name">AutomaticNumberPlateReader</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="settings_detector_heading">Edge Detector</string>
    <string name="settings_detector_canny_lower">Lower Threshold</string>
    <string name="settings_detector_canny_upper">Upper Threshold</string>
    <string name="settings_button_text">Settings</string>
    <string name="settings_shape_filtering">Shape Filtering</string>
    <string name="settings_shape_filtering_min_area">Min Area Sze</string>
    <string name="settings_shape_filtering_max_area">Max Area Size</string>
</resources>
