<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/settings_detector_heading">

        <EditTextPreference
            app:key="canny_lower_threshold"
            app:title="@string/settings_detector_canny_lower"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:key="edit_text_preference_1"
            app:key="canny_upper_threshold"
            app:title="@string/settings_detector_canny_upper"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_shape_filtering">

        <EditTextPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:key="shape_filter_area_lower"
            app:title="@string/settings_shape_filtering_min_area"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:key="edit_text_preference_1"
            app:key="canny_upper_threshold"
            app:title="@string/settings_shape_filtering_max_area"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

</PreferenceScreen>
